build(vercel): add vercel configuration and deployment docs
Add vercel.json configuration for SPA routing and update package.json build script
Create DEPLOYMENT.md with detailed vercel deployment instructions
Update .gitignore to exclude .vercel directory

--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "postinstall": "tailwindcss init -p"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.81.1",
